Extended Script with overlay function and minimalistic CSS
Fixed couple of Bugs due to missing object refrence
Added open function and event binding
Added random String generator helper function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="page-content">
     <ul id="mainGallery">
       <li class="image-type">
+        <img src="assets/img/350x350.png" alt="IMAGE" />
       </li>
       <li class="image-type">
         <img src="assets/img/750x1500.png" alt="IMAGE" />
