Finished basic Functionality
Completed distinction between image and Text/Quote type
Clicking on element now only opens that specific item
Added „Responsive“ Meta-Tag to page Head

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 
   <title>Web Gallery</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
   <!-- Dependencies -->
   <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 
@@ -50,7 +53,7 @@
 
 
   <script>
-  tbwg.init('#mainGallery')
+  tbwg.init('#mainGallery');
   </script>
 </body>
 </html>
