--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
 
   <script>
-  tbwg.init('#mainGallery');
+  tbwg.init('#mainGallery', {
+    arrows: false
+  });
   </script>
 </body>
 </html>
