CSS Improvements and simplified function call in the Example
Uploaded the current Version to my Server and linked it in the README
Centered big images in the gallery view

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
 
 
   <script>
-  tbwg.init('#mainGallery', {
-    arrows: false
-  });
+  tbwg.init('#mainGallery');
   </script>
 </body>
 </html>
