--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
   <!-- Dependencies -->
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="assets/js/jQuery.js" type="text/javascript"></script>
 
   <!-- Styles -->
   <link href='assets/css/page-style.css' rel='stylesheet' type='text/css'>
