--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
   <script>
-  tbwg.init('#mainGallery');
+  tbwg.init('#mainGallery', {cssTransitions: false});
   </script>
 </body>
 </html>
