Updated example to use CSS transitions
Changed index.html to simpler function call so it defaults to CSS
transitions

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
   <script>
-  tbwg.init('#mainGallery', {cssTransitions: false});
+  tbwg.init('#mainGallery');
   </script>
 </body>
 </html>
