Fix for gridSize default value
Added code for identifying breakpoints in options and adding one
breakpoint for default gridSize

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
   <script>
-  tbwg.init('#mainGallery');
+  tbwg.init('#mainGallery', {breakpoints:{420: 1, 640: 2}});
   </script>
 </body>
 </html>
