Fixed issue with closeItem callback function
Fixed issue with event listeners not being set
Created a rmvEvt function to unset the closeEvent
The closeItem functions will now be set when a element is opened

--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
 
 
   <script>
-  tbwg.init('#mainGallery', {breakpoints:{420: 1, 640: 2}});
+  var gallery1 = tbwg;
+  var gallery2 = tbwg;
+  gallery1 = gallery1.on.closeItem.call(gallery1, function(){
+    alert('CLOSE');
+  });
+  gallery1.init('#mainGallery', {breakpoints:{420: 1, 640: 2}});
+  console.log(gallery2);
+  console.log(gallery1 == gallery2);
   </script>
 </body>
 </html>
