Removed debugging console.log from index
Changed callback to a more subtile one

--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
   var gallery1 = tbwg;
   var gallery2 = tbwg;
   gallery1 = gallery1.on.closeItem.call(gallery1, function(){
-    alert('CLOSE');
+    console.info('This is a Callback triggert on element close');
   });
   gallery1.init('#mainGallery', {breakpoints:{420: 1, 640: 2}});
-  console.log(gallery2);
-  console.log(gallery1 == gallery2);
   </script>
 </body>
 </html>
