--- a/index.html
+++ b/index.html
@@ -47,18 +47,54 @@
         </div>
       </li>
     </ul>
+    <hr />
+    <br />
+    <br />
+    <ul id="mainGallery2">
+      <li class="text-type">
+        <div>
+          <p>This is another just a Quote</p>
+        </div>
+      </li>
+      <li class="image-type">
+        <div>
+          <div>
+            <img src="assets/img/950x950.png" alt="IMAGE" />
+            <p>Description</p>
+          </div>
+        </div>
+      </li>
+      <li class="image-type">
+        <img src="assets/img/350x350.png" alt="IMAGE" />
+      </li>
+      <li class="image-type">
+        <img src="assets/img/750x1500.png" alt="IMAGE" />
+      </li>
+      <li class="text-type">
+        <p>This is just a Quote</p>
+      </li>
+      <li class="image-type">
+        <div>
+          <img src="assets/img/1900x900.png" alt="IMAGE" />
+        </div>
+      </li>
+      <li class="image-type">
+        <img src="assets/img/350x350.png" alt="IMAGE" />
+      </li>
+    </ul>
+
   </div>
   <!-- Scripts -->
   <script src="assets/js/web-gallery.js" type="text/javascript"></script>
 
 
   <script>
-  var gallery1 = tbwg;
-  var gallery2 = tbwg;
-  gallery1 = gallery1.on.closeItem.call(gallery1, function(){
+  var gal1 = tbwg.init('#mainGallery', {breakpoints:{420: 1, 640: 2}});
+
+  gal1.on.closeItem.call(gal1, function(){
     console.info('This is a Callback triggert on element close');
   });
-  gallery1.init('#mainGallery', {breakpoints:{420: 1, 640: 2}});
+  //tbwg.init('#mainGallery2');
   </script>
 </body>
 </html>
